# wgpu-svelte-template

./: Cargo.toml  README.md  build.bash
copy-wasm/: Cargo.toml
copy-wasm/src/: main.rs
site/: index.html  package-lock.json  package.json
site/public/shaders/: square.wgsl
site/src/: App.svelte
site/src/lib/: Canvas.svelte
src/: action.rs  app.rs  bindgroup.rs  lib.rs  pipeline.rs  renderer.rs  texture.rs  uniform.rs
