[package]
name = "wgpu-svelte-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.12.0", features = ["webgl"] }
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.57" }
console_error_panic_hook = "0.1.7"
log = "0.4.17"
wasm-logger = "0.2.0"
cgmath = { version = "0.18.0", features = ["serde"] }
winit = "0.26.1"
js-sys = "0.3.57"
futures = "0.3.21"
bytemuck = { version = "1.9.1", features = ["derive"] }
serde = { version = "1.0.137", features = ["serde_derive"] }

[profile.release]
lto = true

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.30"
